# retail_supply_chain_agent

./: .gitignore  DEV_PRIORITY.md  EVAL_REPORT.md  EVAL_REPORT_R2.md  README.md  TODO.md  pyproject.toml
data/promo_synthetic/: gen_data.py
demo/: run_demo.py  web_app.py
evals/: critic_calibration.yaml  run_calibration.py
src/retail_agent/governance/audit/: logger.py
src/retail_agent/governance/hitl/: gate.py
src/retail_agent/layer1_perception/context/: builder.py
src/retail_agent/layer1_perception/entry/: entrypoint.py
src/retail_agent/layer2_orchestration/experts/: base.py  critic.py  explain.py  forecast.py  safety_stock.py  what_if.py
src/retail_agent/layer2_orchestration/planner/: planner.py
src/retail_agent/layer3_compute/forecast_engine/ml/: tool.py
src/retail_agent/layer3_compute/safety_stock_engine/monte_carlo/: __init__.py
src/retail_agent/layer3_compute/safety_stock_engine/z_score/: engine.py
src/retail_agent/layer4_decision/action_builder/: builder.py
src/retail_agent/schemas/: __init__.py  core.py
src/retail_agent/versioning/: __init__.py
